# redis-test-mcp-tools

./: .coveragerc  .gitignore  LICENSE  NEXT_CHAT_INSTRUCTIONS.md  PROJECT_STATUS.md  README.md  Roadmap.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml  test.yml
docs/: api-reference.md
docs/examples/: cursor-setup.md
examples/: cursor_config.json
scripts/: manage_server.py  run_server.py  run_tests.py
src/redis_test_mcp_tools/: __init__.py  config.py  main.py  server.py
src/redis_test_mcp_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/redis_test_mcp_tools/tools/: __init__.py  ast_tools.py  file_tools.py  test_tools.py
tests/: README.md  conftest.py  test_analysis.py  test_ast_parsing.py  test_ast_resilience.py  test_config.py  test_file_operations.py  test_integration.py  test_run_server.py  test_security.py  test_server_tools.py  test_test_tools.py
